maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:33: error: missing arguments for method isDirectionFree;
follow this method with `_' if you want to treat it as a partially applied function
			while (!(isDirectionFree) && sommeAngle > 0) {
                                 ^